<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srLeague"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".presentation.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar" />

        <com.kennyc.view.MultiStateView
            android:id="@+id/msvLeagueList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:msv_emptyView="@layout/default_empty_layout"
            app:msv_errorView="@layout/default_error_layout"
            app:msv_loadingView="@layout/default_loading_layout"
            app:msv_viewState="content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLeagueList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="@dimen/dimen_8dp" />
        </com.kennyc.view.MultiStateView>
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>